fix pixel perfect and overflow

--- a/source/sass/blocks/pagination-list.scss
+++ b/source/sass/blocks/pagination-list.scss
@@ -3,14 +3,15 @@
   flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 40px 0 0;
   margin: 0 auto;
+  column-gap: 20px;
+  row-gap: 10px;
 
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
     padding-top: 72px;
-    width: 400px;
     margin: 0 0 0 auto;
   }
 
@@ -31,10 +32,6 @@
   border-radius: 4px;
   list-style: none;
   position: relative;
-
-  &:not(:last-child) {
-    padding-right: 20px;
-  }
 
   @media (min-width: $tablet-width) {
     width: auto;
